--- a/style.css
+++ b/style.css
@@ -56,14 +56,11 @@ body {
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background: url(./images/mjy15.jpg) no-repeat;
-    background-size: cover;
-    background-attachment: fixed; /* Garde l'image fixe en arrière-plan */
-    background-position: center;
     display: flex;
     align-items: center;
     padding: 70px 10% 0;
     z-index: 1;
+    margin-bottom: 40px;
 }
 
 
@@ -132,6 +129,8 @@ body {
 }
 
 .about {
+    margin-top: 200px;
+    margin-bottom: 200px;
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     align-items: center;
@@ -203,6 +202,7 @@ body {
 .skills {
     z-index: 0;
 }
+
 
 
 .sub-title {
@@ -287,37 +287,20 @@ body {
 }
 
 
-
-
-
-
-
-.flip-card {
-    background-color: transparent;
-    width: 100%;
-    perspective: 1000px; /* Remove if you don't want the 3D effect */
+.back-card{
+    display: none;
 }
 
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-}
 
-.flip-card.flipped .flip-card-inner {
-    transform: rotateY(180deg);
-}
 
-.flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    backface-visibility: hidden;
-}
 
-.flip-card-back {
-    transform: rotateY(180deg);
-}
+
+
+
+
+
+
+
 
 
 
