--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
 body {
     color: #ededed;
     background: #000;
-    margin-right: 5%;
-    margin-left: 5%;
+    margin-right: 13rem;
+    margin-left: 13rem;
+    min-height: 100vh;
 }
 
 .header {
@@ -61,9 +62,10 @@ body {
     height: 100vh;
     display: flex;
     align-items: center;
-    padding: 70px 10% 0;
+    padding: 70px 0 0; /* Remove horizontal padding */
     z-index: 1;
     margin-bottom: 40px;
+    box-sizing: border-box; /* Ensure padding is included in the width */
 }
 
 
@@ -193,7 +195,6 @@ body {
     color: #96D1D1;
     text-decoration: none;
     transition: .5s ease;
-    margin-right: 15px;
 }
 
 .about-text a:hover {
@@ -481,23 +482,17 @@ body {
     gap: 3rem;
     padding-left: 30px;
     margin-top: 220px;
+    margin-bottom: 200px;
 }
 
 .contact-text h2{
     font-size: 90px;
     line-height: 1;
-    text-align: center;
+    margin-bottom: 20px;
 }
 
 .contact-text h2 span{
     color: #96D1D1;
-}
-
-.contact-text h4{
-    margin: 15px 0;
-    color: rgb(228, 228, 228);
-    font-size: 20px;
-    font-weight: 600;
 }
 
 .contact-text p{
@@ -564,7 +559,7 @@ body {
     width: 90%;
     padding: 18px;
     background: #55555557;
-    color: #000;
+    color: aliceblue;
     font-size: 1rem;
     font-weight: 600;
     margin-bottom: 0.5rem;
@@ -599,21 +594,22 @@ body {
     box-shadow: 0 0 20px #96D1D1;
 }
 
-.last-text {
-    margin: 0; /* Reset margins */
-    background: #081b29; /* Optional: Set background color */
-    color: #fff; /* Optional: Set text color */
-    text-align: center; /* Center the text */
-    position: relative; /* Ensure it stays within the flow of the document */
+footer {
+    margin: 0;
+    background: transparent; 
+    color: #fff; 
+    text-align: center; 
+    position: relative;
+    width: 100%; 
+    border-top: 1px solid #fff; 
+
 }
 
-.last-text p{
+footer p {
     width: 100%;
     text-align: center;
     padding: 25px 0;
-    background: #081b29;
     font-weight: 300;
-    margin-top: 70px;
 }
 
 .top{
@@ -628,6 +624,38 @@ body {
     font-size: 20px;
     padding: 10px;
     border-radius: 0.5rem;
+}
+
+
+#alert-container {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    width: 80%;
+    max-width: 600px;
+    text-align: center;
+}
+
+.alert {
+    padding: 15px;
+    margin: 10px 0;
+    border-radius: 5px;
+    font-size: 16px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.alert-success {
+    background-color: #4caf50;
+    color: #fff;
+}
+
+.alert-error {
+    background-color: #f44336;
+    color: #fff;
 }
 
 
