--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     cursor: default;
     opacity: 0;
     animation: slideRight 1s ease forwards;
+    cursor: pointer;
 }
 
 .navbar a {
@@ -44,7 +45,7 @@ body {
     color: #fff;
     text-decoration: none;
     font-weight: 500;
-    margin-left: 35px;
+    margin-left: 40px;
     transition: .3s;
     opacity: 0;
     animation: slideTop .5s ease forwards;
@@ -139,7 +140,7 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     align-items: center;
-    gap: 1rem;
+    gap: max(5rem, 5%);
     position: relative;
     z-index: 0;
 }
@@ -495,11 +496,18 @@ body {
     color: #96D1D1;
 }
 
-.contact-text p{
-    color: rgb(177, 177, 177);
+.contact-text h5{
+    color: aliceblue;
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 2rem;
+}
+
+.contact-text p{
+    color: rgb(177, 177, 177);
+    font-size: 16px;
+    line-height: 1.4;
+    margin-bottom: 4rem;
 }
 
 .contact-list{
