--- a/project.css
+++ b/project.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: 'popins', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -37,134 +37,275 @@ body {
     background: #fff; /* Couleur du pouce lors du survol */
 }
 
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px 10%;
-    background: #081b29;
+.project-details {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
+    flex-direction: column;
+    justify-content: left;
+    padding: 3rem;
+    margin-top: 3rem;
+    border-radius: 10px;
+    gap: 50px;
 }
 
-.logo {
-    position: relative;
-    font-size: 25px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-    cursor: default;
-    opacity: 0;
-    animation: slideRight 1s ease forwards;
-    cursor: pointer;
-}
-
-.navbar a {
-    display: inline-block;
-    font-size: 25px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 40px;
-    transition: .3s;
-    opacity: 0;
-    animation: slideTop .5s ease forwards;
-    animation-delay: calc(.2s * var(--i));
-}
-
-.navbar a:hover {
-    color: #96D1D1;
-}
-
-
-.project-details{
-    display: flex;
-    align-items: center;
-}
-
-.project-details img{
+.project-exit img {
     width: 100%;
-    max-width: 500px;
+    max-width: 100px;
     height: auto;
 }
 
-.go-back{
+.go-back {
     display: flex;
     flex-direction: row;
-    justify-content: space-beetween;
-    margin-top: 150px;
     text-decoration: none;
 }
 
-.go-back a{
+.go-back a {
     text-decoration: none;
 }
 
-.go-back img {
-    margin-right: 30px; /* Ajoute un espace entre l'image et le texte */
-}
-
-.go-back p{
+.project-exit p {
     font-size: 20px;
     color: #fff;
     font-weight: 500;
     cursor: pointer;
-    opacity: 0;
-    animation: slideTop .5s ease forwards;
-    animation-delay: calc(.2s * var(--i));
     white-space: nowrap;
+    margin-left: 3rem;
 }
 
+.project-details-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    gap: 20px;
+    margin-top: 50px;
+}
 
+.project-details-title h1 {
+    font-size: 70px;
+    font-weight: 600;
+    letter-spacing: 2px;
+}
 
+.project-details-title h1 span {
+    color: #81bcbc;
+}
 
-@keyframes slideRight {
-    0% {
-        transform: translateX(-100px);
-        opacity: 0;
+.project-technos {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    gap: 50px;
+    margin-top: 50px;
+    flex-wrap: wrap; /* Ajouté pour permettre le retour à la ligne des éléments */
+}
+
+.project-technos i {
+    font-size: 50px;
+    margin-right: 10px;
+}
+
+.year {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    gap: 20px;
+}
+
+.year h2 {
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.year p {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.technos {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    gap: 20px;
+}
+
+.technos h2 {
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.technos i {
+    font-size: 50px;
+}
+
+.logos {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    gap: 20px;
+}
+
+.github-link {
+    position: absolute;
+    right: 16rem; /* Ajustez cette valeur selon la taille de la marge souhaitée */
+}
+
+.github-link a {
+    text-decoration: none;
+    padding: 12px 28px;
+    background: #96D1D1;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #212908;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.github-link a:hover {
+    background: #96D1D1;
+    color: #081b29;
+    box-shadow: 0 0 20px #96D1D1;
+}
+
+.home-photo {
+    width: 100%;
+    height: auto;
+    display: block; /* Assure que l'image est un élément de bloc */
+    object-fit: cover; /* Assure que l'image couvre toute la zone tout en respectant les proportions */
+    border-radius: 10px;
+}
+
+.project-presentation {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    gap: 70px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 2rem;
+    margin-left: 2rem;
+}
+
+.project-presentation h2 {
+    margin-bottom: 2rem;
+}
+
+.project-presentation p {
+    font-size: 20px;
+    font-weight: 500;
+    word-wrap: break-word; /* Permet de couper les mots trop longs */
+    white-space: normal; /* Permet de passer à la ligne automatiquement */
+}
+
+footer {
+    margin: 0;
+    background: transparent; 
+    color: #fff; 
+    text-align: center; 
+    position: relative;
+    width: 100%; 
+    border-top: 1px solid #fff; 
+}
+
+footer p {
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    font-weight: 300;
+}
+
+.top {
+    position: fixed;
+    bottom: 5rem;
+    right: 2.1rem;
+}
+
+.top i {
+    color: #000;
+    background: #96D1D1;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 0.5rem;
+}
+
+/* Media queries pour les écrans plus petits */
+@media (max-width: 1200px) {
+    body {
+        margin-right: 5rem;
+        margin-left: 5rem;
     }
 
-    100% {
-        opacity: 1;
-        transform: translateX(0px);
+    .github-link {
+        right: 5rem; /* Ajustez cette valeur selon la taille de la marge souhaitée */
     }
 }
 
-@keyframes slideLeft {
-    0% {
-        transform: translateX(100px);
-        opacity: 0;
+@media (max-width: 768px) {
+    body {
+        margin-right: 2rem;
+        margin-left: 2rem;
     }
 
-    100% {
-        opacity: 1;
-        transform: translateX(0px);
+    .github-link {
+        right: 2rem; /* Ajustez cette valeur selon la taille de la marge souhaitée */
+    }
+
+    .project-details-title h1 {
+        font-size: 50px;
+    }
+
+    .project-details-title h1 span {
+        font-size: 50px;
+    }
+
+    .project-technos {
+        gap: 20px;
+    }
+
+    .year h2, .technos h2 {
+        font-size: 24px;
+    }
+
+    .year p, .technos i {
+        font-size: 18px;
+    }
+
+    .project-presentation p {
+        font-size: 18px;
     }
 }
 
-@keyframes slideTop {
-    0% {
-        transform: translateY(50px);
-        opacity: 0;
+@media (max-width: 480px) {
+    body {
+        margin-right: 1rem;
+        margin-left: 1rem;
     }
 
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-
-@keyframes slideBottom {
-    0% {
-        transform: translateY(-100px);
-        opacity: 0;
+    .github-link {
+        right: 1rem; /* Ajustez cette valeur selon la taille de la marge souhaitée */
     }
 
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
+    .project-details-title h1 {
+        font-size: 40px;
+    }
+
+    .project-details-title h1 span {
+        font-size: 40px;
+    }
+
+    .project-technos {
+        gap: 10px;
+    }
+
+    .year h2, .technos h2 {
+        font-size: 20px;
+    }
+
+    .year p, .technos i {
+        font-size: 16px;
+    }
+
+    .project-presentation p {
+        font-size: 16px;
     }
 }
