COMPLETE PROJECT PART

--- a/project.css
+++ b/project.css
@@ -94,7 +94,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: left;
-    gap: 50px;
+    gap: 70px;
     margin-top: 50px;
     flex-wrap: wrap; /* Ajouté pour permettre le retour à la ligne des éléments */
 }
@@ -139,10 +139,38 @@ body {
 
 .logos {
     display: flex;
-    flex-direction: row;
-    justify-content: left;
     gap: 20px;
 }
+
+.logos i {
+    position: relative;
+    font-size: 50px;
+    transition: color 0.3s ease;
+    cursor: pointer;
+}
+
+.logos i:hover::after {
+    content: attr(data-lang); /* Utilise l'attribut data-lang pour afficher le nom du langage */
+    font-family: 'Poppins', sans-serif;
+    position: absolute;
+    bottom: -30px; /* Ajustez cette valeur pour positionner le texte en dessous de l'icône */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #000;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    font-size: 14px;
+    opacity: 0;
+    animation: fadeIn 0.3s forwards;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
+}  
 
 .github-link {
     position: absolute;
