--- a/style.css
+++ b/style.css
@@ -900,7 +900,7 @@ footer p {
     }
 
     .skills-list div{
-        min-height: 100%; /* Ajustez selon vos besoins */
+        height: 100%; /* Ajustez selon vos besoins */
     }
 
     footer p {
