--- a/style.css
+++ b/style.css
@@ -94,15 +94,42 @@ body {
     height: 100vh;
     display: flex;
     align-items: center;
-    padding: 70px 0 0; /* Remove horizontal padding */
+    padding: 20px; /* Remove horizontal padding */
     z-index: 1;
     margin-bottom: 40px;
     box-sizing: border-box; /* Ensure padding is included in the width */
 }
 
+.latest-project {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.latest-project img {
+    width: 50%;
+    height: 50%;
+}
+
+.latest-project h2 {
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: .5s;
+}
+
+.latest-project h2 span {
+    color: #96D1D1;
+}
+
 
 .home-content {
-    max-width: 600px;
+    flex: 1;
+    margin-right: 20px;
 }
 
 .home-content h3 {
