--- a/project.css
+++ b/project.css
@@ -279,6 +279,7 @@ footer p {
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     .github-link {
